@@ -1,3 +1,9 @@
+2003-03-06  Don Porter	<dgp@users.sourceforge.net>
+
+	* generic/TclUtf.c (Tcl_UniCharNcasecmp):	Corrected failure to
+	* tests/utf.test (utf-25.*):	properly compare Unicode strings of
+	different case in a case insensitive manner.  [Bug 699042]
+
 2003-03-03  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.4.2 TAGGED FOR RELEASE ***
